# hacks_ai_student_status_prediction

./: .gitignore  README.md  pyproject.toml
Notebooks/: EDA_student.ipynb  complete_solution.ipynb
src/data/: clean_data.py
src/features/: add_features.py
src/models/: submit.py  train.py
workflow/: .gitignore  Snakefile  config.yaml
