[tool.poetry]
name = "student_prediction"
version = "0.1.0"
description = ""
authors = ["vlad_rodionov <varodionov70@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.4"
click = "^8.1.3"
black = "^22.8.0"
catboost = "^1.0.6"
scikit-learn = "^1.1.2"
snakemake = "^7.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
